Related bug #1394 - fix pb multilinguisme
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3250 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
+++ b/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
@@ -108,7 +108,6 @@ body, td, div, a , input, select, textarea, #myProfileFiche .statut{
 	width:200px;
 }
 
-
 .cellBodyWindows {
     background-image: none;
     border-top: solid 1px #dedede;
@@ -200,6 +199,9 @@ body, td, div, a , input, select, textarea, #myProfileFiche .statut{
 #browseBar {
 	margin-left:3px;
 	margin-top:3px;
+}
+#browseBar #i18n {
+    margin-right: 10px;
 }
 
 #spaces, #spacePerso {
