Related to Bug #1394 - correction pb boite fichier transparente dans la GED
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3300 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
+++ b/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
@@ -571,6 +571,10 @@ td.milieuOngletOn {
 	background-color:transparent;
 }
 
+#preview .tableBoard {
+	background-color:#FFF;
+	}  
+
 	
 .arrayPane {
 	box-shadow:5px 5px 10px #cccccc;	
@@ -695,7 +699,7 @@ td.milieuOngletOn {
 	display:block;}
 
 /* regroupement des styles mise en couleur*/
-#blog #titresTopics a , #blog #titresArchives a, #blog #titresLiens a {
+#blog #titresTopics a , #blog #titresArchives a, #blog #titresLiens a , .titreCouleur{
 	color:#0C81CF;
 	
 }
@@ -708,3 +712,5 @@ td.milieuOngletOn {
 	}
 .txtnav { 
 	font-size:12px;}
+	
+
