Related Bug #1394, fixing bug IE8 and PIE.htc for [Que voulez-vous faire]
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3344 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
+++ b/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
@@ -172,20 +172,26 @@ body, td, div, a , input, select, textarea, #myProfileFiche .statut{
 #TreeDiv1 {
 	background-color: #FFFFFF;
 }
+
+.cellOperation div {
+	position:relative;
+	width:180px;
+	}
+
 #menutoggle {
 	background-color: #f1790f;
+	margin:0 0px 4px 0;
+	padding:0 20px  0 30px;
+	text-align:center;
+	display:inline-block;
     color: #FFF;
-    display:inline-block;
     font-size: 12px;
     line-height: 20px;
-    padding: 0 20px  0 30px;
 	border:1px solid #F15F0F ;
+	border-right:0;
 	border-radius: 10px 0 0 10px;
 	-moz-border-radius:  10px 0 0 10px;
 	-webkit-border-radius:  10px 0 0 10px;
-	margin:0 0px 4px 0;
-	text-align:center;
-	border-right:0;
 	behavior: url("/silverpeas/util/styleSheets/PIE.htc");
 }
 
