Related Bug #1394, fixing bug IE8 and PIE.htc for tabbedPane
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@3427 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
+++ b/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
@@ -380,7 +380,7 @@ body, td, div, a , input, select, textarea, #myProfileFiche .statut{
 	color: #444444;
 }
 
-#tabbedPane1 , #tabbedPane0{ position:relative; }
+#tabbedPane, #tabbedPane2 , #tabbedPane1 , #tabbedPane0{ position:relative; }
 
 .milieuBoutonV5 a:hover , .milieuOngletOff a:hover  {
 	color: #000000;
