Preparing site for 5.5.2 release

--- a/src/site/xdoc/index.xml.vm
+++ b/src/site/xdoc/index.xml.vm
@@ -41,7 +41,7 @@
       </p>
       <ol>
         <li>Download the 
-          <a href="http://www.silverpeas.org/files/Silverpeas-${installer_stable_version}-izpack-installer.jar">installer</a>
+          <a href="http://www.silverpeas.org/files/Silverpeas-${installer_stable_version}-installer.jar">installer</a>
         </li>
         <li>Run the following command (or double click on the jar file) 
           <code>java -jar Silverpeas-${installer_stable_version}-installer.jar</code>
