--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2326,19 +2326,19 @@ caption {
   color:#333366;
   border-bottom:1px solid #9E9ECF;
   display:block;
-  padding:5px 0 3px 0; 
+  padding:0px 0 3px 0; 
   font-size:11px;
 }
 #directory .link:hover, #directory .link:focus {
   color:#000;
   border-bottom:1px solid #000;
   display:block;
-  padding:5px 0 3px 0; 
+  padding:0px 0 3px 0; 
   font-size:11px;
 }
 
 #directory .action .invitation {
-	display: none;
+	/*display: none;*/
 }
 
 #directory .NameLink {
@@ -2893,10 +2893,10 @@ caption {
 #myProfileFiche p{ margin:0; padding:0;}
 
 #myProfile #myProfileFiche {
-	width:20%;
+	width:180px;
+	padding:8px;
 	float:left;
 	position:relative;
-	
 }
 #myProfile .mail {
   text-decoration: underline;
@@ -2908,7 +2908,7 @@ caption {
 	margin-top:5px;
 	}
 
-#myProfileFiche  .action .link , #publicProfileFiche  #contactCommun .link, #publicProfileFiche  #allContact .link{
+#myProfileFiche  .action .link ,   #contactCommun .link,   #allContact .link{
   color:#333366;
   border-bottom:1px solid #9E9ECF;
   padding:0 0 3px 0; 
@@ -3013,14 +3013,17 @@ caption {
 }
 #myProfileContenu  address { font-style:normal;}
 
-#myProfile #myProfileFiche #allContact, #publicProfile #publicProfileFiche #contactCommun {
+#myProfileFiche #allContact, #myProfileFiche #contactCommun {
 	background-color:#E9E9E9;
 	clear:both;
 	height:100%;
+	padding:8px;
 }
 
 #myProfile #myProfileFiche .unContact {
-	width:126px; float:left; height:100%;
+	height:100%;
+	margin-left:6px;
+	clear:both;
 }
 
 #myProfile #myProfileFiche .unContact .contactName{
@@ -3051,7 +3054,8 @@ caption {
 #publicProfileFiche p{ margin:0; padding:0;}
 
 #publicProfile #publicProfileFiche {
-	width:20%;
+	width:180px;
+	padding:8px;
 	float:left;
 	position:relative;
 	
@@ -3164,16 +3168,25 @@ caption {
 }
 
 #publicProfileContenu { 
-	width:78%; 
-	margin-left:15px; 
-	float:left;
+	margin-left:210px; 
 }
+
+#publicProfileContenu #gef-tabs,
+#publicProfileContenu form,
+#publicProfileContenu center, 
+#publicProfileContenu .tab-content,
+#contactProfil, 
+#newsFeedProfil,
+#invitationProfil {
+	float:left;
+	width:100%;}
+	
 #publicProfileContenu  address { font-style:normal;}
 
 /* IMAGE  bg_tri.png à chercher dans corps dans fleche */
 .sousNavBulle {
 	background:#EAEAEA url(../icons/arrow/bg_tri.png) bottom left no-repeat;
- 	float:none;
+ 	float:left;
   	margin:0 auto;
   	text-align:left;
   	width:100%;
@@ -3234,6 +3247,251 @@ caption {
 #publicProfile #publicProfileFiche  .profilPhotoContact img {
 	height:62px;
 }
+
+/* News feed  */
+#publicProfileContenu p {
+	margin:0;
+	padding:0;}
+
+.newsFeed {
+	padding-top:10px;
+	float:left;
+	width:100%;
+	}
+
+#newsFeedProfil .profilPhoto {
+	width:50px;
+	height:50px;
+	overflow:hidden;    
+	display: inline;
+	border:0;
+	float:left;
+	clear:both;
+	margin:0px 6px
+	}
+#newsFeedProfil .profilPhoto img {
+	width:50px;
+	height:auto;
+	}
+#newsFeedProfil .txt {
+	margin-left:70px;
+	color:#727272;
+	}
+	
+#newsFeedProfil .txt .detail  {
+	color:#333;
+	line-height:16px;
+	background-color:transparent;
+	background-position:top left;
+	background-repeat:no-repeat;
+}
+
+#newsFeedProfil .txt .detail .profilPhoto {
+	width:25px;
+	height:25px;
+	overflow:hidden;
+	border:0;
+	float:inherit;
+	clear:none;
+	margin:0;
+	display:inline-block;
+	}
+#newsFeedProfil .txt .detail .profilPhoto img{
+	width:25px;
+	}
+
+#newsFeedProfil .txt .detail.statut {
+	background-image:url(pictos/newsFeed_statut.gif);
+	padding-left:20px;
+	}
+	
+#newsFeedProfil .txt .detail.publication {
+	background-image:url(pictos/newsFeed_publication.gif);
+	padding-left:20px;
+	}
+	
+#newsFeedProfil .txt .detail.event {
+	background-image:url(pictos/newsFeed_event.gif);
+	padding-left:20px;
+	}
+
+#newsFeedProfil .txt .detail.picture {
+	background-image:url(pictos/newsFeed_picture.gif);
+	padding-left:20px;
+	}
+	
+#newsFeedProfil	 .name { 
+	color:#26334A;
+	}
+	
+#newsFeedProfil	.a_new {
+	height:50px;
+	}
+html > body #newsFeedProfil	.a_new {
+	min-height:50px;
+	height:auto;
+	}
+	
+	
+/* Invitation  et contact*/
+#ReceiveInvitation, #SendInvitation , #contactProfil{
+	float:left;
+	width:100%;
+	}
+
+#invitationProfil .a_invitation , #contactProfil .a_contact{
+	border:1px solid #CFCFCF;
+	padding:8px;
+	margin:8px 8px 0 0; 
+	height:84px;
+	position:relative;
+	
+	}
+
+html > body #invitationProfil .a_invitation , html > body  #contactProfil .a_contact{
+	min-height:84px;
+	height:auto;
+	}
+	
+/* Par défaut 1 colonne */
+.aff_colonnes .a_contact {
+	
+	
+}
+
+
+/*  
+-- Pour affichage2 colonnes 
+#contactProfil .aff_colonnes .a_contact {
+	width:46%;
+	float:right;
+}*/
+
+/*
+-- Pour affichage 3 colonnes
+.aff_colonnes .a_contact {
+
+	width:30%;
+	float:right;
+}
+*/
+
+#invitationProfil .profilPhoto, #contactProfil  .profilPhoto{
+    border: 1px solid #CCCCCC;
+    float: left;
+    height: auto;
+    margin: 7px;
+    overflow: hidden;
+    width: 64px;
+	float:left;
+	clear:both;
+	margin:0px
+}
+
+#invitationProfil .profilPhoto img , #contactProfil .profilPhoto img{
+	width: 64px;
+	height:auto;
+	}
+
+#invitationProfil a.name, #contactProfil .userName a{  
+	font-size:14px;
+	color:#000;
+	font-weight:bold;
+	}
+#invitationProfil a.name:hover,  #contactProfil .userName a:hover {
+	color:#333;
+	}
+#invitationProfil .txt, #contactProfil .txt{
+	color:#727272;
+	margin:0 140px 0 74px;
+	}
+#invitationProfil .message {
+	color:#3A3A3A;
+	padding:8px 0 0;
+	}
+
+#invitationProfil .action, #contactProfil .action{
+	float:right;
+	width:135px;
+	margin-top:14px;
+}
+ #contactProfil .action{
+	 margin-top:31px;
+}
+	 
+	 
+.action .link {
+    border-bottom: 1px solid #9E9ECF;
+    clear: right;
+    color: #333366;
+    float: right;
+    font-size: 11px;
+    margin-bottom: 8px;
+    padding: 0 0 3px;
+    width: 132px;
+}
+
+.action .link:hover {
+	  color:#000;
+	  border-bottom:1px solid #000;
+  }
+
+#contactProfil ul.info , #contactProfil ul.info li{
+	margin: 0;
+	padding: 0;
+	list-style-type:none
+	}
+	
+#contactProfil ul li.infoConnection img {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+#contactProfil .info li.userType {
+    color: #333333;
+    font-size: 12px;
+    font-weight: bold;
+    padding-top: 10px;
+}
+	
+/* general Style */	
+hr.sep  { 
+	clear:both;
+	height:0px;
+	line-height:0px;
+	width:100%;
+	border-style:solid;
+	border-color:#E5E5E5;
+	border-width:0px;
+	background-color:#E5E5E5;
+	margin:10px 0;
+	padding:0;
+	border-bottom:1px solid #E5E5E5;
+	}
+
+.txtColor {
+	color:#3A5998;
+	}
+	
+/* class actuellement utilisée dans l'annuaire expert à généraliser */
+.linkMore {
+    background: url("../icons/open.gif") no-repeat scroll right center #EFF9E3;
+    border-bottom: 1px solid #CCCCCC;
+    border-top: 1px solid #CCCCCC;
+    clear: both;
+    color: #4C4C4C;
+    display: block;
+    font-size: 11px;
+    line-height: 30px;
+    margin: 10px 0;
+    padding: 0 15px;
+}
+
+.linkMore:hover, .linkMore:focus  {
+	background-color:#E9F7D7;
+	}
+
 
 /*- [ publicProfile END ] --------------------------- */
 
